Scrum-84
Finalización de la historia usuario 84, put para actualizar el registro de estudiantes a un laboratorio.
